[build-system]
requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"

[project]
name = "custom-logger-xzf8971"
version = "1.1.0"
authors = [
  { name="Zifeng", email="zifeng.xu@foxmail.com" },
]
description = "Just a very simple wrapper to configure a thread safe logger."
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/xzf89718/custom-logger-xzf8971"
"Bug Tracker" = "https://github.com/xzf89718/custom-logger-xzf8971/issues"
